{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 61,
  "lineage": "40529eec-2cc2-c805-dea2-7c8b258080c3",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "reservation_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "reservation-app/reservation-app-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 8,
                "labels": {
                  "app": "reservation-app",
                  "managed-by": "terraform"
                },
                "name": "reservation-app-ingress",
                "namespace": "reservation-app",
                "resource_version": "143142",
                "uid": "a5a95d1e-d934-435f-a6a2-cd471c051585"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "reservation.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend-nginx",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "backend-nginx",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api",
                            "path_type": "Exact"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "reservation-app-ingress",
            "namespace": "reservation-app"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "reservation_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "reservation-app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "reservation-app"
                },
                "name": "reservation-app",
                "resource_version": "102002",
                "uid": "eb92ef9c-259f-4c00-9759-65fd1e3f6c7f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "reservation-app"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_backend_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "reservation-app/allow-backend-mysql",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-backend-mysql",
                "namespace": "reservation-app",
                "resource_version": "102009",
                "uid": "db0df988-a5ae-47fe-aa41-5629da4a078b"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "backend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "3306",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "mysql"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-backend-mysql",
            "namespace": "reservation-app"
          },
          "dependencies": [
            "kubernetes_namespace.reservation_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_frontend_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "reservation-app/allow-frontend-backend",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-frontend-backend",
                "namespace": "reservation-app",
                "resource_version": "102008",
                "uid": "0d76930b-53f8-4267-be87-d5356668929a"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "frontend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "9000",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "backend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-frontend-backend",
            "namespace": "reservation-app"
          },
          "dependencies": [
            "kubernetes_namespace.reservation_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "reservation-app/default-deny-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-ingress",
                "namespace": "reservation-app",
                "resource_version": "102010",
                "uid": "9ba9d9e7-69bf-4b93-96d7-b1e570d9b132"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-ingress",
            "namespace": "reservation-app"
          },
          "dependencies": [
            "kubernetes_namespace.reservation_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "reservation-app/mysql",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "mysql",
                  "managed-by": "terraform"
                },
                "name": "mysql",
                "namespace": "reservation-app",
                "resource_version": "102006",
                "uid": "de90528b-9aab-4cc9-94f4-040ba8791cf6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "mysql",
                    "node_port": 0,
                    "port": 3306,
                    "protocol": "TCP",
                    "target_port": "3306"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mysql",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "mysql",
            "namespace": "reservation-app"
          },
          "dependencies": [
            "kubernetes_namespace.reservation_app"
          ]
        }
      ]
    }
  ]
}